--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PayPal Checkout</title>
+    <script src="https://www.paypal.com/sdk/js?client-id=AfRksrL_rbqMj6F6q8YlM53PZKOXScU_JC-oZyZgHEqf-geZcnDZ_Blm4m3BGnNoWy9TCKzYD3Xfo72L"></script>
 </head>
 <body>
-    <p>This is my first website.vvgvhhhgvugcfcgvbvbvvvvvvvvvvvvvvvvvvvvvvv <br> vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</p>
-    <h1>alex the great.</h1>
-    <img src="" alt="">
+    
+    <div id="paypal-button-container">
 
+    </div>
+    <script>
+        paypal.Buttons({
+            createOrder: function(data, actions){
+                return actions.order.create({
+                purchase_units: [{
+                        amount: {
+                            value: '10.00'
+                        }
+                    }]
+                });
+            },
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(details){
+                    console.log(details);
+                    alert('transaction completed by ' + details.payer.name.given_name);
+                });
+            }
+        }).render('#paypal-button-container')
+    </script>
 </body>
 </html>
