--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PayPal Checkout</title>
-    <script src="https://www.paypal.com/sdk/js?client-id=AfRksrL_rbqMj6F6q8YlM53PZKOXScU_JC-oZyZgHEqf-geZcnDZ_Blm4m3BGnNoWy9TCKzYD3Xfo72L"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=</script>
 </head>
 <body>
     
